# featureCsignal

./: README.md  pyproject.toml
src/featureCsignal/: featureCsignal.py
