[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "featureCsignal"
version = "0.0.1"
authors = [
  { name="Riccardo Vinco", email="riccardo.vinco@studenti.unipd.it" },
]
description = "Explainability for simple feed forward neural networks."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3.0",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Apeiron-G/featureCsignal"
Issues = "https://github.com/Apeiron-G/featureCsignal/issues"
